--- a/src/RabbitMq.Consumer/RabbitMq.Consumer.csproj
+++ b/src/RabbitMq.Consumer/RabbitMq.Consumer.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.5" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
         <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     </ItemGroup>
@@ -17,5 +18,9 @@
       <Content Include="..\..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\RabbitMq.Core\RabbitMq.Core.csproj" />
     </ItemGroup>
 </Project>
