--- a/src/RabbitMq.Producer/Properties/launchSettings.json
+++ b/src/RabbitMq.Producer/Properties/launchSettings.json
@@ -12,7 +12,10 @@
         "RABBITMQ_USER": "admin",
         "RABBITMQ_PASSWORD": "admin",
         "RABBITMQ_HOST": "localhost",
-        "RABBITMQ_QUEUE_NAME": "rabbitmq-example-queue"
+        "RABBITMQ_QUEUE_NAME": "rabbitmq-example-queue",
+        "MASS_TRANSIT_QUEUE_NAME": "masstransit-example-queue",
+        "MASS_TRANSIT_HOST": "localhost",
+        "MASS_TRANSIT_PORT": "5673"
       }
     }
   }
