--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,9 @@ services:
       RABBITMQ_USER: "${RABBITMQ_USER}"
       RABBITMQ_PASSWORD: "${RABBITMQ_PASSWORD}"
       RABBITMQ_QUEUE_NAME: "${RABBITMQ_QUEUE_NAME}"
+      MASS_TRANSIT_QUEUE_NAME: "${MASS_TRANSIT_QUEUE_NAME}"
+      MASS_TRANSIT_HOST: "${MASS_TRANSIT_HOST}"
+      MASS_TRANSIT_PORT: "${MASS_TRANSIT_PORT}"
     depends_on:
       - rabbitmq
       - rabbitmq-mass-transit
@@ -66,6 +69,10 @@ services:
       RABBITMQ_USER: "${RABBITMQ_USER}"
       RABBITMQ_PASSWORD: "${RABBITMQ_PASSWORD}"
       RABBITMQ_QUEUE_NAME: "${RABBITMQ_QUEUE_NAME}"
+      MASS_TRANSIT_QUEUE_NAME: "${MASS_TRANSIT_QUEUE_NAME}"
+      MASS_TRANSIT_HOST: "${MASS_TRANSIT_HOST}"
+      MASS_TRANSIT_PORT: "${MASS_TRANSIT_PORT}"
+      USE_MASS_TRANSIT: "${USE_MASS_TRANSIT}"
     depends_on:
         - rabbitmq
         - rabbitmq-mass-transit
